added config.json for database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,10 @@
       <div class="row">
         <div class="span8">
           <p>
-            We already collected <%= digitAmount %> digits by <%= peopleAmount %> different contributors!
+            We already collected <strong><%= digitAmount %></strong> digits by <strong><%= peopleAmount %></strong> different contributors!
+          </p>
+          <p>
+            <small><strong>By the way:</strong>&nbsp; We already calculated one digit secretly when you opened this page.</small>
           </p>
         </div>
         <div class="span4">
@@ -76,9 +79,6 @@
     <script src="javascripts/custom_checkbox_and_radio.js"></script>
     <script src="javascripts/custom_radio.js"></script>
     <script src="javascripts/jquery.tagsinput.js"></script>
-    <script src="javascripts/bootstrap-tooltip.js"></script>
-    <script src="javascripts/jquery.placeholder.js"></script>
-    <script src="http://vjs.zencdn.net/c/video.js"></script>
     <script src="javascripts/application.js"></script>
     <script src="javascripts/pi.js"></script>
   </body>
