--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/flat-ui.css' />
   </head>
   <body>
+    <a href="https://github.com/alternaDev/crazyPI"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
     <div class="container">
       <div class="row">
         <div class="span12">
