i present to you: WEBWORKERS <3

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,8 @@
     <script src="javascripts/jquery.dropkick-1.0.0.js"></script>
     <script src="javascripts/custom_checkbox_and_radio.js"></script>
     <script src="javascripts/custom_radio.js"></script>
+    <script src="javascripts/underscore.min.js"></script>
+    <script src="javascripts/parallel.min.js"></script>
     <script src="javascripts/application.js"></script>
     <script src="javascripts/pi.js"></script>
   </body>
