--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
     <script src="javascripts/custom_radio.js"></script>
     <script src="javascripts/Chart.min.js"></script>
     <script src="javascripts/underscore.min.js"></script>
-    <script src="javascripts/parallel.min.js"></script>
+    <script src="javascripts/parallel.js"></script>
     <script src="javascripts/application.js"></script>
     <script src="javascripts/pi.js"></script>
   </body>
